thêm lý do check in muộn hoặc checkout sớm